# OtusHomework_8_Bayan

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
Data/: Data.hpp
Filter/: Filter.hpp
Hash/: Hash.hpp
Options/: Options.hpp
Processing/: Handler.hpp
Processor/: Processor.hpp
Scaner/: Scaner.hpp
